@@ -4,6 +4,7 @@ import static java.lang.Boolean.TRUE;
 import static java.util.Collections.emptyList;
 import static org.opentripplanner.apis.transmodel.mapping.SeverityMapper.getTransmodelSeverity;
 import static org.opentripplanner.apis.transmodel.mapping.TransitIdMapper.mapIDToDomain;
+import static org.opentripplanner.apis.transmodel.mapping.TransitIdMapper.mapIDsToDomain;
 import static org.opentripplanner.apis.transmodel.mapping.TransitIdMapper.mapIDsToDomainNullSafe;
 import static org.opentripplanner.apis.transmodel.model.EnumTypes.FILTER_PLACE_TYPE_ENUM;
 import static org.opentripplanner.apis.transmodel.model.EnumTypes.MULTI_MODAL_MODE;
@@ -28,7 +29,7 @@ import graphql.schema.GraphQLObjectType;
 import graphql.schema.GraphQLOutputType;
 import graphql.schema.GraphQLScalarType;
 import graphql.schema.GraphQLSchema;
-import java.time.LocalDate;
+import graphql.schema.SchemaTransformer;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -43,8 +44,12 @@ import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import javax.annotation.Nullable;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Envelope;
+import org.opentripplanner.apis.support.graphql.injectdoc.ApiDocumentationProfile;
+import org.opentripplanner.apis.support.graphql.injectdoc.CustomDocumentation;
+import org.opentripplanner.apis.support.graphql.injectdoc.InjectCustomDocumentation;
 import org.opentripplanner.apis.transmodel.mapping.PlaceMapper;
 import org.opentripplanner.apis.transmodel.mapping.TransitIdMapper;
 import org.opentripplanner.apis.transmodel.model.DefaultRouteRequestType;
@@ -117,10 +122,11 @@ import org.opentripplanner.routing.graphfinder.PlaceType;
 import org.opentripplanner.service.vehiclerental.model.VehicleRentalPlace;
 import org.opentripplanner.transit.api.model.FilterValues;
 import org.opentripplanner.transit.api.request.FindRegularStopsByBoundingBoxRequest;
+import org.opentripplanner.transit.api.request.FindRoutesRequest;
+import org.opentripplanner.transit.api.request.FindStopLocationsRequest;
 import org.opentripplanner.transit.api.request.TripRequest;
 import org.opentripplanner.transit.model.basic.TransitMode;
 import org.opentripplanner.transit.model.framework.FeedScopedId;
-import org.opentripplanner.transit.model.network.Route;
 import org.opentripplanner.transit.model.site.StopLocation;
 import org.opentripplanner.transit.service.TransitService;
 import org.slf4j.Logger;
@@ -157,10 +163,12 @@ public class TransmodelGraphQLSchema {
   public static GraphQLSchema create(
     RouteRequest defaultRequest,
     ZoneId timeZoneId,
-    TransitTuningParameters transitTuningParameters
+    ApiDocumentationProfile docProfile,
+    TransitTuningParameters transitTuning
   ) {
-    return new TransmodelGraphQLSchema(defaultRequest, timeZoneId, transitTuningParameters)
-      .create();
+    var schema = new TransmodelGraphQLSchema(defaultRequest, timeZoneId, transitTuning).create();
+    schema = decorateSchemaWithCustomDocumentation(schema, docProfile);
+    return schema;
   }
 
   @SuppressWarnings("unchecked")
@@ -376,44 +384,38 @@ public class TransmodelGraphQLSchema {
       dateTimeScalar
     );
 
-    GraphQLInputObjectType inputPlaceIds = GraphQLInputObjectType
-      .newInputObject()
+    GraphQLInputObjectType inputPlaceIds = GraphQLInputObjectType.newInputObject()
       .name("InputPlaceIds")
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("quays")
           .description("Quays to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("lines")
           .description("Lines to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("bikeRentalStations")
           .description("Bike rentals to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("bikeParks")
           .description("Bike parks to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
           .build()
       )
       .field(
-        GraphQLInputObjectField
-          .newInputObjectField()
+        GraphQLInputObjectField.newInputObjectField()
           .name("carParks")
           .description("Car parks to include by id.")
           .type(new GraphQLList(Scalars.GraphQLString))
@@ -421,21 +423,18 @@ public class TransmodelGraphQLSchema {
       )
       .build();
 
-    GraphQLObjectType queryType = GraphQLObjectType
-      .newObject()
+    GraphQLObjectType queryType = GraphQLObjectType.newObject()
       .name("QueryType")
       .field(tripQuery)
       .field(viaTripQuery)
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("stopPlace")
           .description("Get a single stopPlace based on its id)")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(stopPlaceType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
@@ -446,23 +445,22 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("stopPlaces")
           .description("Get all stopPlaces")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(stopPlaceType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(env -> {
-            if ((env.getArgument("ids") instanceof List)) {
-              return ((List<String>) env.getArgument("ids")).stream()
-                .map(TransitIdMapper::mapIDToDomain)
+            if (env.getArgument("ids") != null) {
+              var ids = mapIDsToDomainNullSafe(env.getArgument("ids"));
+              return ids
+                .stream()
                 .map(id -> StopPlaceType.fetchStopPlaceById(id, env))
                 .collect(Collectors.toList());
             }
@@ -478,36 +476,31 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("stopPlacesByBbox")
           .description("Get all stop places within the specified bounding box")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(stopPlaceType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
@@ -516,8 +509,7 @@ public class TransmodelGraphQLSchema {
             GraphQLArgument.newArgument().name("authority").type(Scalars.GraphQLString).build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("multiModalMode")
               .type(MULTI_MODAL_MODE)
               .description(
@@ -528,8 +520,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByInUse")
               .description("If true only stop places with at least one visiting line are included.")
               .type(Scalars.GraphQLBoolean)
@@ -559,109 +550,89 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quay")
           .description("Get a single quay based on its id)")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(quayType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getTransitService(environment)
-              .getStopLocation(mapIDToDomain(environment.getArgument("id")))
+            GqlUtil.getTransitService(environment).getStopLocation(
+              mapIDToDomain(environment.getArgument("id"))
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quays")
           .description("Get all quays")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(quayType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(GraphQLArgument.newArgument().name("name").type(Scalars.GraphQLString).build())
           .dataFetcher(environment -> {
-            if ((environment.getArgument("ids") instanceof List)) {
-              if (
-                environment
-                  .getArguments()
-                  .entrySet()
-                  .stream()
-                  .filter(stringObjectEntry -> stringObjectEntry.getValue() != null)
-                  .count() !=
-                1
-              ) {
+            if (environment.containsArgument("ids")) {
+              var ids = mapIDsToDomainNullSafe(environment.getArgument("ids"));
+
+              if (environment.getArgument("name") != null) {
                 throw new IllegalArgumentException("Unable to combine other filters with ids");
               }
+
               TransitService transitService = GqlUtil.getTransitService(environment);
-              return ((List<String>) environment.getArgument("ids")).stream()
-                .map(id -> transitService.getStopLocation(mapIDToDomain(id)))
-                .collect(Collectors.toList());
+              return ids.stream().map(transitService::getStopLocation).toList();
             }
-            if (environment.getArgument("name") == null) {
-              return GqlUtil.getTransitService(environment).listStopLocations();
-            }
-            //                            else {
-            //                                return index.getLuceneIndex().query(environment.getArgument("name"), true, true, false)
-            //                                        .stream()
-            //                                        .map(result -> index.stopForId.get(mapper.fromIdString(result.id)));
-            //                            }
-            return emptyList();
+
+            FindStopLocationsRequest request = FindStopLocationsRequest.of()
+              .withName(environment.getArgument("name"))
+              .build();
+
+            return GqlUtil.getTransitService(environment).findStopLocations(request);
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quaysByBbox")
           .description("Get all quays within the specified bounding box")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(quayType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLatitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLongitude")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authority")
               .deprecate(
                 "This is the Transmodel namespace or the GTFS feedID - avoid using this. Request a new field if necessary."
@@ -670,8 +641,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByInUse")
               .description("If true only quays with at least one visiting line are included.")
               .type(Scalars.GraphQLBoolean)
@@ -693,21 +663,20 @@ public class TransmodelGraphQLSchema {
             var authority = environment.<String>getArgument("authority");
             var filterInUse = environment.<Boolean>getArgument("filterByInUse");
 
-            FindRegularStopsByBoundingBoxRequest findRegularStopsByBoundingBoxRequest = FindRegularStopsByBoundingBoxRequest
-              .of(envelope)
-              .withFeedId(authority)
-              .filterByInUse(filterInUse)
-              .build();
+            FindRegularStopsByBoundingBoxRequest findRegularStopsByBoundingBoxRequest =
+              FindRegularStopsByBoundingBoxRequest.of(envelope)
+                .withFeedId(authority)
+                .filterByInUse(filterInUse)
+                .build();
 
-            return GqlUtil
-              .getTransitService(environment)
-              .findRegularStopsByBoundingBox(findRegularStopsByBoundingBoxRequest);
+            return GqlUtil.getTransitService(environment).findRegularStopsByBoundingBox(
+              findRegularStopsByBoundingBoxRequest
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("quaysByRadius")
           .description(
             "Get all quays within the specified walking radius from a location. There are no maximum " +
@@ -723,24 +692,21 @@ public class TransmodelGraphQLSchema {
             )
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("latitude")
               .description("Latitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("longitude")
               .description("Longitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("radius")
               .description(
                 "Radius via streets (in meters) to search for from the specified location"
@@ -755,26 +721,25 @@ public class TransmodelGraphQLSchema {
           .dataFetcher(environment -> {
             List<NearbyStop> stops;
             try {
-              stops =
-                GqlUtil
-                  .getGraphFinder(environment)
-                  .findClosestStops(
-                    new Coordinate(
-                      environment.getArgument("longitude"),
-                      environment.getArgument("latitude")
-                    ),
-                    environment.getArgument("radius")
-                  )
-                  .stream()
-                  .filter(stopAtDistance ->
+              stops = GqlUtil.getGraphFinder(environment)
+                .findClosestStops(
+                  new Coordinate(
+                    environment.getArgument("longitude"),
+                    environment.getArgument("latitude")
+                  ),
+                  environment.getArgument("radius")
+                )
+                .stream()
+                .filter(
+                  stopAtDistance ->
                     environment.getArgument("authority") == null ||
                     stopAtDistance.stop
                       .getId()
                       .getFeedId()
                       .equalsIgnoreCase(environment.getArgument("authority"))
-                  )
-                  .sorted(Comparator.comparing(s -> s.distance))
-                  .collect(Collectors.toList());
+                )
+                .sorted(Comparator.comparing(s -> s.distance))
+                .collect(Collectors.toList());
             } catch (RoutingValidationException e) {
               LOG.warn(
                 "findClosestPlacesByWalking failed with exception, returning empty list of places. ",
@@ -794,8 +759,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("nearest")
           .description(
             "Get all places (quays, stop places, car parks etc. with coordinates) within the specified radius from a location. The returned type has two fields place and distance. The search is done by walking so the distance is according to the network of walkables."
@@ -809,24 +773,21 @@ public class TransmodelGraphQLSchema {
             )
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("latitude")
               .description("Latitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("longitude")
               .description("Longitude of the location")
               .type(new GraphQLNonNull(Scalars.GraphQLFloat))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumDistance")
               .description(
                 "Maximum distance (in meters) to search for from the specified location. Default is 2000m."
@@ -836,8 +797,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumResults")
               .description(
                 "Maximum number of results. Search is stopped when this limit is reached. Default is 20."
@@ -847,8 +807,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByPlaceTypes")
               .description("Only include places of given types if set. Default accepts all types")
               .defaultValue(Arrays.asList(TransmodelPlaceType.values()))
@@ -856,8 +815,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByModes")
               .description(
                 "Only include places that include this mode. Only checked for places with mode i.e. quays, departures."
@@ -866,8 +824,7 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByInUse")
               .description(
                 "Only affects queries for quays and stop places. If true only quays and stop places with at least one visiting line are included."
@@ -877,16 +834,14 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("filterByIds")
               .description("Only include places that match one of the given ids.")
               .type(inputPlaceIds)
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("multiModalMode")
               .type(MULTI_MODAL_MODE)
               .description(
@@ -910,18 +865,15 @@ public class TransmodelGraphQLSchema {
             if (filterByIds != null) {
               filterByStops = toIdList(((List<String>) filterByIds.get("quays")));
               filterByRoutes = toIdList(((List<String>) filterByIds.get("lines")));
-              filterByBikeRentalStations =
-                filterByIds.get("bikeRentalStations") != null
-                  ? (List<String>) filterByIds.get("bikeRentalStations")
-                  : List.of();
-              filterByBikeParks =
-                filterByIds.get("bikeParks") != null
-                  ? (List<String>) filterByIds.get("bikeParks")
-                  : List.of();
-              filterByCarParks =
-                filterByIds.get("carParks") != null
-                  ? (List<String>) filterByIds.get("carParks")
-                  : List.of();
+              filterByBikeRentalStations = filterByIds.get("bikeRentalStations") != null
+                ? (List<String>) filterByIds.get("bikeRentalStations")
+                : List.of();
+              filterByBikeParks = filterByIds.get("bikeParks") != null
+                ? (List<String>) filterByIds.get("bikeParks")
+                : List.of();
+              filterByCarParks = filterByIds.get("carParks") != null
+                ? (List<String>) filterByIds.get("carParks")
+                : List.of();
             }
 
             List<TransitMode> filterByTransportModes = environment.getArgument("filterByModes");
@@ -939,52 +891,45 @@ public class TransmodelGraphQLSchema {
             }
 
             List<PlaceAtDistance> places;
-            places =
-              GqlUtil
-                .getGraphFinder(environment)
-                .findClosestPlaces(
-                  environment.getArgument("latitude"),
-                  environment.getArgument("longitude"),
-                  environment.getArgument("maximumDistance"),
-                  maxResults,
-                  filterByTransportModes,
-                  filterByPlaceTypes,
-                  filterByStops,
-                  filterByStations,
-                  filterByRoutes,
-                  filterByBikeRentalStations,
-                  filterByNetwork,
-                  GqlUtil.getTransitService(environment)
-                );
+            places = GqlUtil.getGraphFinder(environment).findClosestPlaces(
+              environment.getArgument("latitude"),
+              environment.getArgument("longitude"),
+              environment.getArgument("maximumDistance"),
+              maxResults,
+              filterByTransportModes,
+              filterByPlaceTypes,
+              filterByStops,
+              filterByStations,
+              filterByRoutes,
+              filterByBikeRentalStations,
+              filterByNetwork,
+              GqlUtil.getTransitService(environment)
+            );
 
             if (TRUE.equals(environment.getArgument("filterByInUse"))) {
-              places =
-                places
-                  .stream()
-                  .filter(placeAtDistance -> {
-                    if (placeAtDistance.place() instanceof StopLocation stop) {
-                      return !GqlUtil
-                        .getTransitService(environment)
-                        .findPatterns(stop, true)
-                        .isEmpty();
-                    } else {
-                      return true;
-                    }
-                  })
-                  .toList();
+              places = places
+                .stream()
+                .filter(placeAtDistance -> {
+                  if (placeAtDistance.place() instanceof StopLocation stop) {
+                    return !GqlUtil.getTransitService(environment)
+                      .findPatterns(stop, true)
+                      .isEmpty();
+                  } else {
+                    return true;
+                  }
+                })
+                .toList();
             }
 
-            places =
-              PlaceAtDistanceType
-                .convertQuaysToStopPlaces(
-                  placeTypes,
-                  places,
-                  environment.getArgument("multiModalMode"),
-                  GqlUtil.getTransitService(environment)
-                )
-                .stream()
-                .limit(orgMaxResults)
-                .collect(Collectors.toList());
+            places = PlaceAtDistanceType.convertQuaysToStopPlaces(
+              placeTypes,
+              places,
+              environment.getArgument("multiModalMode"),
+              GqlUtil.getTransitService(environment)
+            )
+              .stream()
+              .limit(orgMaxResults)
+              .collect(Collectors.toList());
             if (places.isEmpty()) {
               return new DefaultConnection<>(
                 List.of(),
@@ -996,29 +941,26 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("authority")
           .description("Get an authority by ID")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(authorityType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            return GqlUtil
-              .getTransitService(environment)
-              .getAgency(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
+            return GqlUtil.getTransitService(environment).getAgency(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("authorities")
           .description("Get all authorities")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1029,29 +971,26 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("operator")
           .description("Get a operator by ID")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(operatorType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getTransitService(environment)
-              .getOperator(TransitIdMapper.mapIDToDomain(environment.getArgument("id")))
+            GqlUtil.getTransitService(environment).getOperator(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("operators")
           .description("Get all operators")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1062,15 +1001,13 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("line")
           .description("Get a single line based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(lineType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLID))
               .build()
@@ -1080,159 +1017,144 @@ public class TransmodelGraphQLSchema {
             if (id.isBlank()) {
               return null;
             }
-            return GqlUtil
-              .getTransitService(environment)
-              .getRoute(TransitIdMapper.mapIDToDomain(id));
+            return GqlUtil.getTransitService(environment).getRoute(
+              TransitIdMapper.mapIDToDomain(id)
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("lines")
-          .description("Get all lines")
+          .description("Get all _lines_")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(lineType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
+              .description(
+                "Set of ids of _lines_ to fetch. If this is set, no other filters can be set."
+              )
               .type(new GraphQLList(Scalars.GraphQLID))
               .build()
           )
-          .argument(GraphQLArgument.newArgument().name("name").type(Scalars.GraphQLString).build())
           .argument(
-            GraphQLArgument.newArgument().name("publicCode").type(Scalars.GraphQLString).build()
+            GraphQLArgument.newArgument()
+              .name("name")
+              .description(
+                "Prefix of the _name_ of the _line_ to fetch. This filter is case insensitive."
+              )
+              .type(Scalars.GraphQLString)
+              .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
+              .name("publicCode")
+              .description("_Public code_ of the _line_ to fetch.")
+              .type(Scalars.GraphQLString)
+              .build()
+          )
+          .argument(
+            GraphQLArgument.newArgument()
               .name("publicCodes")
+              .description("Set of _public codes_ to fetch _lines_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("transportModes")
+              .description("Set of _transport modes_ to fetch _lines_ for.")
               .type(new GraphQLList(TRANSPORT_MODE))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authorities")
-              .description("Set of ids of authorities to fetch lines for.")
+              .description("Set of ids of _authorities_ to fetch _lines_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("flexibleOnly")
-              .description("Filter by lines containing flexible / on demand serviceJourneys only.")
+              .description(
+                "Filter by _lines_ containing flexible / on demand _service journey_ only."
+              )
               .type(Scalars.GraphQLBoolean)
-              .defaultValue(false)
+              .defaultValueProgrammatic(false)
               .build()
           )
           .dataFetcher(environment -> {
-            if ((environment.getArgument("ids") instanceof List)) {
+            if (environment.containsArgument("ids")) {
+              var ids = mapIDsToDomainNullSafe(environment.getArgument("ids"));
+
+              // flexibleLines gets special treatment because it has a default value.
               if (
-                environment
-                  .getArguments()
-                  .entrySet()
-                  .stream()
-                  .filter(it ->
-                    it.getValue() != null &&
-                    !(it.getKey().equals("flexibleOnly") && it.getValue().equals(false))
-                  )
-                  .count() !=
-                1
+                Stream.of(
+                  "name",
+                  "publicCode",
+                  "publicCodes",
+                  "transportModes",
+                  "authorities"
+                ).anyMatch(environment::containsArgument) ||
+                Boolean.TRUE.equals(environment.getArgument("flexibleOnly"))
               ) {
                 throw new IllegalArgumentException("Unable to combine other filters with ids");
               }
-              return ((List<String>) environment.getArgument("ids")).stream()
-                .map(TransitIdMapper::mapIDToDomain)
-                .map(id -> {
-                  return GqlUtil.getTransitService(environment).getRoute(id);
-                })
-                .collect(Collectors.toList());
-            }
-            Stream<Route> stream = GqlUtil.getTransitService(environment).listRoutes().stream();
 
-            if ((boolean) environment.getArgument("flexibleOnly")) {
-              Collection<Route> flexRoutes = GqlUtil
-                .getTransitService(environment)
-                .getFlexIndex()
-                .getAllFlexRoutes();
-              stream = stream.filter(flexRoutes::contains);
+              return GqlUtil.getTransitService(environment).getRoutes(ids);
             }
-            if (environment.getArgument("name") != null) {
-              stream =
-                stream
-                  .filter(route -> route.getLongName() != null)
-                  .filter(route ->
-                    route
-                      .getLongName()
-                      .toString()
-                      .toLowerCase()
-                      .startsWith(((String) environment.getArgument("name")).toLowerCase())
-                  );
-            }
-            if (environment.getArgument("publicCode") != null) {
-              stream =
-                stream
-                  .filter(route -> route.getShortName() != null)
-                  .filter(route ->
-                    route.getShortName().equals(environment.getArgument("publicCode"))
-                  );
-            }
-            if (environment.getArgument("publicCodes") instanceof List) {
-              Set<String> publicCodes = Set.copyOf(environment.getArgument("publicCodes"));
-              stream =
-                stream
-                  .filter(route -> route.getShortName() != null)
-                  .filter(route -> publicCodes.contains(route.getShortName()));
-            }
-            if (environment.getArgument("transportModes") != null) {
-              Set<TransitMode> modes = Set.copyOf(environment.getArgument("transportModes"));
-              stream = stream.filter(route -> modes.contains(route.getMode()));
-            }
-            if ((environment.getArgument("authorities") instanceof Collection)) {
-              Collection<String> authorityIds = environment.getArgument("authorities");
-              stream =
-                stream.filter(route ->
-                  route.getAgency() != null &&
-                  authorityIds.contains(route.getAgency().getId().getId())
-                );
-            }
-            return stream.collect(Collectors.toList());
+
+            var name = environment.<String>getArgument("name");
+            var publicCode = environment.<String>getArgument("publicCode");
+            var publicCodes = FilterValues.ofEmptyIsEverything(
+              "publicCodes",
+              environment.<List<String>>getArgument("publicCodes")
+            );
+            var transportModes = FilterValues.ofEmptyIsEverything(
+              "transportModes",
+              environment.<List<TransitMode>>getArgument("transportModes")
+            );
+            var authorities = FilterValues.ofEmptyIsEverything(
+              "authorities",
+              environment.<List<String>>getArgument("authorities")
+            );
+            boolean flexibleOnly = Boolean.TRUE.equals(environment.getArgument("flexibleOnly"));
+
+            FindRoutesRequest findRoutesRequest = FindRoutesRequest.of()
+              .withLongName(name)
+              .withShortName(publicCode)
+              .withShortNames(publicCodes)
+              .withTransitModes(transportModes)
+              .withAgencies(authorities)
+              .withFlexibleOnly(flexibleOnly)
+              .build();
+
+            return GqlUtil.getTransitService(environment).findRoutes(findRoutesRequest);
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("groupOfLines")
           .description("Get a single group of lines based on its id")
           .type(groupOfLinesType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getTransitService(environment)
-              .getGroupOfRoutes(TransitIdMapper.mapIDToDomain(environment.getArgument("id")))
+            GqlUtil.getTransitService(environment).getGroupOfRoutes(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("groupsOfLines")
           .description("Get all groups of lines")
           .type(new GraphQLNonNull(new GraphQLList(new GraphQLNonNull(groupOfLinesType))))
@@ -1240,89 +1162,64 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("serviceJourney")
           .description("Get a single service journey based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(serviceJourneyType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            return GqlUtil
-              .getTransitService(environment)
-              .getTrip(TransitIdMapper.mapIDToDomain(environment.getArgument("id")));
+            return GqlUtil.getTransitService(environment).getTrip(
+              TransitIdMapper.mapIDToDomain(environment.getArgument("id"))
+            );
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("serviceJourneys")
           .description("Get all _service journeys_")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(serviceJourneyType)))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("lines")
               .description("Set of ids of _lines_ to fetch _service journeys_ for.")
               .type(new GraphQLList(Scalars.GraphQLID))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("privateCodes")
               .description("Set of ids of _private codes_ to fetch _service journeys_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("activeDates")
               .description("Set of _operating days_ to fetch _service journeys_ for.")
               .type(new GraphQLList(TransmodelScalars.DATE_SCALAR))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authorities")
               .description("Set of ids of _authorities_ to fetch _service journeys_ for.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            var authorities = FilterValues.ofEmptyIsEverything(
-              "authorities",
-              mapIDsToDomainNullSafe(environment.getArgument("authorities"))
-            );
-            var lineIds = FilterValues.ofEmptyIsEverything(
-              "lines",
-              mapIDsToDomainNullSafe(environment.getArgument("lines"))
-            );
-            var privateCodes = FilterValues.ofEmptyIsEverything(
-              "privateCodes",
-              environment.<List<String>>getArgument("privateCodes")
-            );
-            var activeServiceDates = FilterValues.ofEmptyIsEverything(
-              "activeDates",
-              environment.<List<LocalDate>>getArgument("activeDates")
-            );
-
-            TripRequest tripRequest = TripRequest
-              .of()
-              .withAgencies(authorities)
-              .withRoutes(lineIds)
-              .withNetexInternalPlanningCodes(privateCodes)
-              .withServiceDates(activeServiceDates)
+            var tripRequest = TripRequest.of()
+              .withIncludeAgencies(mapIDsToDomain(environment.getArgument("authorities")))
+              .withIncludeRoutes(mapIDsToDomain(environment.getArgument("lines")))
+              .withIncludeNetexInternalPlanningCodes(environment.getArgument("privateCodes"))
+              .withIncludeServiceDates(environment.getArgument("activeDates"))
               .build();
 
             return GqlUtil.getTransitService(environment).getTrips(tripRequest);
@@ -1330,14 +1227,12 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeRentalStations")
           .description("Get all bike rental stations")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("ids")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
@@ -1359,22 +1254,19 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeRentalStation")
           .description("Get all bike rental stations")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(bikeRentalStationType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
-            return GqlUtil
-              .getVehicleRentalService(environment)
+            return GqlUtil.getVehicleRentalService(environment)
               .getVehicleRentalStations()
               .stream()
               .filter(bikeRentalStation ->
@@ -1386,8 +1278,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeRentalStationsByBbox")
           .description("Get all bike rental stations within the specified bounding box.")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1396,8 +1287,7 @@ public class TransmodelGraphQLSchema {
             GraphQLArgument.newArgument().name("minimumLatitude").type(Scalars.GraphQLFloat).build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("minimumLongitude")
               .type(Scalars.GraphQLFloat)
               .build()
@@ -1406,42 +1296,36 @@ public class TransmodelGraphQLSchema {
             GraphQLArgument.newArgument().name("maximumLatitude").type(Scalars.GraphQLFloat).build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("maximumLongitude")
               .type(Scalars.GraphQLFloat)
               .build()
           )
           .dataFetcher(environment ->
-            GqlUtil
-              .getVehicleRentalService(environment)
-              .getVehicleRentalStationForEnvelope(
-                environment.getArgument("minimumLongitude"),
-                environment.getArgument("minimumLatitude"),
-                environment.getArgument("maximumLongitude"),
-                environment.getArgument("maximumLatitude")
-              )
+            GqlUtil.getVehicleRentalService(environment).getVehicleRentalStationForEnvelope(
+              environment.getArgument("minimumLongitude"),
+              environment.getArgument("minimumLatitude"),
+              environment.getArgument("maximumLongitude"),
+              environment.getArgument("maximumLatitude")
+            )
           )
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikePark")
           .description("Get a single bike park based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(bikeParkType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
           )
           .dataFetcher(environment -> {
             var bikeParkId = mapIDToDomain(environment.getArgument("id"));
-            return GqlUtil
-              .getVehicleParkingService(environment)
+            return GqlUtil.getVehicleParkingService(environment)
               .listBikeParks()
               .stream()
               .filter(bikePark -> bikePark.getId().equals(bikeParkId))
@@ -1451,15 +1335,13 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("bikeParks")
           .description("Get all bike parks")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(bikeParkType)))
           .dataFetcher(environment ->
-            GqlUtil
-              .getVehicleParkingService(environment)
+            GqlUtil.getVehicleParkingService(environment)
               .listBikeParks()
               .stream()
               .collect(Collectors.toCollection(ArrayList::new))
@@ -1467,8 +1349,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("routingParameters")
           .description("Get default routing parameters.")
           .withDirective(TransmodelDirectives.TIMING_DATA)
@@ -1477,15 +1358,13 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("situations")
           .description("Get all active situations.")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(new GraphQLNonNull(new GraphQLList(new GraphQLNonNull(ptSituationElementType))))
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("authorities")
               .description("Filter by reporting authorities.")
               .deprecate(
@@ -1495,24 +1374,21 @@ public class TransmodelGraphQLSchema {
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("codespaces")
               .description("Filter by reporting source.")
               .type(new GraphQLList(Scalars.GraphQLString))
               .build()
           )
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("severities")
               .description("Filter by severity.")
               .type(new GraphQLList(EnumTypes.SEVERITY))
               .build()
           )
           .dataFetcher(environment -> {
-            Collection<TransitAlert> alerts = GqlUtil
-              .getTransitService(environment)
+            Collection<TransitAlert> alerts = GqlUtil.getTransitService(environment)
               .getTransitAlertService()
               .getAllAlerts();
 
@@ -1533,35 +1409,31 @@ public class TransmodelGraphQLSchema {
             }
 
             if (!codespaces.isEmpty()) {
-              alerts =
-                alerts
-                  .stream()
-                  .filter(alert -> codespaces.contains(alert.siriCodespace()))
-                  .collect(Collectors.toSet());
+              alerts = alerts
+                .stream()
+                .filter(alert -> codespaces.contains(alert.siriCodespace()))
+                .collect(Collectors.toSet());
             }
 
             if (environment.getArgument("severities") instanceof List) {
               List<String> severities = environment.getArgument("severities");
-              alerts =
-                alerts
-                  .stream()
-                  .filter(alert -> severities.contains(getTransmodelSeverity(alert.severity())))
-                  .collect(Collectors.toSet());
+              alerts = alerts
+                .stream()
+                .filter(alert -> severities.contains(getTransmodelSeverity(alert.severity())))
+                .collect(Collectors.toSet());
             }
             return alerts;
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("situation")
           .description("Get a single situation based on its situationNumber")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(ptSituationElementType)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("situationNumber")
               .type(new GraphQLNonNull(Scalars.GraphQLString))
               .build()
@@ -1571,23 +1443,20 @@ public class TransmodelGraphQLSchema {
             if (situationNumber.isBlank()) {
               return null;
             }
-            return GqlUtil
-              .getTransitService(environment)
+            return GqlUtil.getTransitService(environment)
               .getTransitAlertService()
               .getAlertById(mapIDToDomain(situationNumber));
           })
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("leg")
           .description("Refetch a single transit leg based on its id")
           .withDirective(TransmodelDirectives.TIMING_DATA)
           .type(LegType.REF)
           .argument(
-            GraphQLArgument
-              .newArgument()
+            GraphQLArgument.newArgument()
               .name("id")
               .type(new GraphQLNonNull(Scalars.GraphQLID))
               .build()
@@ -1606,8 +1475,7 @@ public class TransmodelGraphQLSchema {
           .build()
       )
       .field(
-        GraphQLFieldDefinition
-          .newFieldDefinition()
+        GraphQLFieldDefinition.newFieldDefinition()
           .name("serverInfo")
           .description(
             "Get OTP deployment information. This is only useful for developers of OTP itself not regular API users."
@@ -1621,17 +1489,30 @@ public class TransmodelGraphQLSchema {
       .field(DatedServiceJourneyQuery.createQuery(datedServiceJourneyType))
       .build();
 
-    return GraphQLSchema
-      .newSchema()
+    var schema = GraphQLSchema.newSchema()
       .query(queryType)
       .additionalType(placeInterface)
       .additionalType(timetabledPassingTime)
       .additionalType(Relay.pageInfoType)
       .additionalDirective(TransmodelDirectives.TIMING_DATA)
       .build();
+
+    return schema;
   }
 
-  private List<FeedScopedId> toIdList(List<String> ids) {
+  private static GraphQLSchema decorateSchemaWithCustomDocumentation(
+    GraphQLSchema schema,
+    ApiDocumentationProfile docProfile
+  ) {
+    var customDocumentation = CustomDocumentation.of(docProfile);
+    if (customDocumentation.isEmpty()) {
+      return schema;
+    }
+    var visitor = new InjectCustomDocumentation(customDocumentation);
+    return SchemaTransformer.transformSchema(schema, visitor);
+  }
+
+  private List<FeedScopedId> toIdList(@Nullable List<String> ids) {
     if (ids == null) {
       return Collections.emptyList();
     }
